position/layout issue fixed, no overlap, will automatically changel ine

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -8,5 +8,5 @@
 }
 
 .main{
-    margin: 40px 240px;
+    margin: 40px 20px;
 }
