--- a/src/components/Question.css
+++ b/src/components/Question.css
@@ -1,13 +1,19 @@
 
+
 .hr-line{
     border: .5px solid rgb(214, 208, 208);
 }
 
 .answers{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    column-gap: 20px;
+    display: flex;
+    flex-direction: row;
+    column-gap: 25px;
+    row-gap: 10px;
+    width: 100%;
+    flex-wrap: wrap;
 }
+
+
 
 .question-title{
 display: inline-block;
@@ -24,4 +30,5 @@ input{
     background-color: white;
     border: solid 1px rgb(191, 183, 183);
     border-radius: 9px;
+    padding:6px 12px;
 }
