--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,12 @@
     position: fixed;
     right:0;
     top: 0;
+    
+    z-index: -1;
 }
 
 .background-bottom{
     position: fixed;
     bottom: 0;
+    z-index: -1;
 }
